--- a/index.html
+++ b/index.html
@@ -7518,7 +7518,7 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p><strong>Prediction of Heart Disease Using Machine Learning</strong></p>
-<p>In this project, we will use the UCI Heart disease dataset and build a K-Nearest Neighbors classifier to accurately predict the likelihood of a patient having a heart disease in the future.</p>
+<p>The UCI Heart Disease dataset is utilized to develop a K-Nearest Neighbors classifier to predict the likelihood of a patient having heart disease.</p>
 <p><strong>EDA: Descriptive Statistics</strong>:
 As per the source, each patient has the following information collected about them:</p>
 <ul>
